fix project page header position
& remove flashing scrollbars when changing to project page

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -48,6 +48,7 @@ html,
     font-family: "Manrope", Arial, Verdana, Tahoma, sans-serif;
     height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .page ::selection {
